fixed skills section header breaking on small screens
removed grey ‘// skills’ on devices smaller than width 365px

--- a/assets/css/3-modules/_skills.sass
+++ b/assets/css/3-modules/_skills.sass
@@ -28,6 +28,8 @@
 .skillsTitle2
   color: grey
   margin-left: 20px
+  @media screen and (max-width: 365px)
+    display: none
 
 .skillHeader
   font-family: 'Open Sans', sans-serif
